test: BaseTest for unit and integration tests, testing koin definitions